<resources>
    <string name="requests_for_guidance">Requests for guidance</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="your_history">Your History</string>
    <string name="app_name">GuideGee</string>
    <string name="guest_sign"><u>Sign as Guest</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="title_activity_loading_page">LoadingPageActivity</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="turn_off_notifications">Turn Off Notifications</string>
    <string name="helprange">Help Range</string>
    <string name="availability">Availability</string>
    <string name="delete_account">Delete Account</string>
    <string name="language">Language</string>
    <string name="languagecountry">Language Country</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="best_guides">Best Guides</string>
    <string name="_1">1</string>
    <string name="_50_7">50,7</string>
    <string name="_2">2</string>
    <string name="andr_lisboa">André Lisboa</string>
    <string name="_44_5">44,5</string>
    <string name="title_activity_profile">Profile</string>
    <string name="typeuser">TypeUser</string>
    <string name="description">Description</string>
    <string name="textview">TextView</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="choose_languages_you_know">Choose languages you know:</string>
    <string name="distance_choice">Distance Choice</string>
    <string name="distance_choice_unity">Distance choice unity</string>
    <string name="logout">Logout</string>
    <string-array name="UnityChoice">
        <item>Km</item>
        <item>mi</item>
    </string-array>
    <string-array name="DistanceChoice">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="LanguageChoice">
        <item>English</item>
        <item>Portuguese</item>
    </string-array>

    <string name="your_histor">Your History</string>
    <string name="jo_o_morais">João Morais</string>
    <string name="joana_marti">Joana Martins</string>
    <string name="habibi_ali">Habibi Ali</string>
    <string name="mohammed_hu">Mohammed Hudidi</string>
    <string name="ruben_pina">Ruben Pina</string>
    <string name="exName">example</string>
    <string name="review_page">Review Page</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="review">Review</string>

    <string name="msgBoxHint">Write your message here.</string>
    <string name="textExample">Texto de Exemplo</string>

    <string name="logText">LogText</string>

    <string name="rememberMe">Remember me?</string>
    <string name="guide_list">Available Guides</string>
    <string name="invalid_region_msg">You\'re not within this guide\'s region of activity!</string>
    <string name="invalid_contact_guide">Contact</string>
    <string name="invalid_review_list">Review List</string>
    <string name="valid_region_msg">You\'re within this guide\s region of activity!</string>
    <string name="valid_send_request">Request</string>

    <string name="emptyValue">Empty Value</string>
    <string name="availableGuides">Available guides</string>
    <string name="viewMap">View Map</string>
    <string name="requestGuidance">Requests for guidance</string>
</resources>