<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/background">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/topBarFragmentView"
        android:name="com.example.projetocm.TopBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/top_bar" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/bottomBarFragmentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="com.example.projetocm.BottomBarFragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/bottom_bar" />

    <TextView
        android:id="@+id/BestGuides"
        android:layout_width="129dp"
        android:layout_height="33dp"
        android:text="@string/best_guides"
        android:textColor="@color/font_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="486dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BestGuides"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/top1"
                android:layout_width="76dp"
                android:layout_height="36dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@color/font_color" />

            <TextView
                android:id="@+id/Person1"
                android:layout_width="143dp"
                android:layout_height="36dp"
                android:text="@string/jo_o_morais"
                android:textAlignment="center"
                android:textColor="@color/font_color" />

            <TextView
                android:id="@+id/Points_Person_1"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="@string/_50_7"
                android:textAlignment="viewEnd"
                android:textColor="@color/font_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/top2"
                android:layout_width="76dp"
                android:layout_height="36dp"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textColor="@color/font_color" />

            <TextView
                android:id="@+id/Person2"
                android:layout_width="143dp"
                android:layout_height="36dp"
                android:text="@string/andr_lisboa"
                android:textAlignment="center"
                android:textColor="@color/font_color" />

            <TextView
                android:id="@+id/Points_Person_2"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:text="@string/_44_5"
                android:textAlignment="viewEnd"
                android:textColor="@color/font_color" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>