<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    tools:context=".EditProfile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/UserImage"
        android:layout_width="285dp"
        android:layout_height="89dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/guidegee"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="339dp"
        android:layout_height="186dp"
        android:layout_marginBottom="75dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/User_description"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/corner_white"
            android:textColor="#000000" />

    </LinearLayout>

    <Button
        android:id="@+id/CancelEdits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/cancel"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SaveEdits"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FF0000"
        app:strokeWidth="1.5dp" />

    <Button
        android:id="@+id/SaveEdits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/save"
        android:textColor="#00FF57"
        android:textColorHighlight="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#00FF57"
        app:strokeWidth="1.5dp" />

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="277dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editTextTextPersonName"
            android:text="@string/name_" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/corner"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editTextTextPassword"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/corner"
            android:ems="10"
            android:inputType="textPassword"
            app:circularflow_defaultRadius="1dp"
            app:circularflow_radiusInDP="1"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editTextTextPassword2"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:background="@drawable/corner"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="DuplicateSpeakableTextCheck" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/spinner2"
                    android:text="@string/choose_languages_you_know" />

                <TextView
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/corner"
                    android:minHeight="48dp"/>

            </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>