<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Profile">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/topBarFragmentView"
        android:name="com.example.projetocm.TopBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/top_bar" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/bottomBarFragmentView"
        android:name="com.example.projetocm.BottomBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/bottom_bar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/UserImage"
        android:layout_width="285dp"
        android:layout_height="89dp"
        android:layout_marginTop="112dp"
        android:src="@drawable/guidegee"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/typeUser"
        android:layout_width="84dp"
        android:layout_height="33dp"
        android:text="@string/typeuser"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserImage" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="223dp"
        android:layout_marginBottom="76dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/User_description"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:background="@drawable/roundcorners"
            android:backgroundTint="#D8D8D8D8"
            android:text="@string/textview"
            android:textColor="#000000" />

    </LinearLayout>

    <ImageView
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/UserImage"
        app:layout_constraintEnd_toEndOf="@+id/UserImage"
        app:layout_constraintTop_toTopOf="@+id/UserImage"
        app:srcCompat="@drawable/edit_profile_button" />

</androidx.constraintlayout.widget.ConstraintLayout>